# HL-MRF-noted

./: .gitignore  CMakeLists.txt
include/: HL_MRF.h
include/GROR/include/: ia_gror.h
include/GROR/src/: gror_pre.cpp
include/Graph/: scan_graph_inference.h  transformation_graph.h  transformation_graph.hpp
script/: run.bat  run.sh
src/: HL_MRF.cpp  example_HL_MRF.cpp  scan_graph_inference.cpp
